--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,3 +1,8 @@
+body {
+  background-color: rgb(233, 215, 207);
+  color: rgb(83, 75, 75);
+}
+
 h1 {
   font-family: "Oswald", sans-serif;
   text-align: center;
@@ -15,10 +20,4 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-#todays-challenge {
-  color: rgb(167, 1, 78);
-  font-weight: bold;
-  font-size: 52px;
 }
