--- a/styles/styles_full_week.css
+++ b/styles/styles_full_week.css
@@ -1,5 +1,56 @@
-ul li {
+header {
+  margin-bottom: 64px;
+}
+
+ul {
   font-family: "Fira Sans", sans-serif;
   text-align: center;
   list-style-type: none;
+  width: 500px;
+  margin: 36px auto 0 auto;
+  padding: 0;
+}
+
+li {
+  background-color: rgb(223, 136, 124);
+  border-radius: 6px;
+  margin: 32px;
+  padding: 16px;
+}
+
+h1 {
+  font-size: 48px;
+  color: rgb(71, 62, 62);
+  margin: 12px 0px;
+}
+
+a {
+  background-color: rgb(162, 1, 78);
+  color: white;
+  border-radius: 4px;
+  font-size: 24px;
+  padding: 12px 48px;
+}
+
+a:hover {
+  background-color: rgb(180, 12, 90);
+  text-decoration: none;
+}
+
+header p {
+  margin-bottom: 36px;
+}
+
+h2 {
+  color: rgb(78, 13, 5);
+  font-family: "Oswald", sans-serif;
+}
+
+main p {
+  margin: 12px;
+  color: rgb(71, 29, 22);
+}
+
+.highlight-goal {
+  background-color: rgb(226, 115, 101);
 }
