--- a/styles/styles_full_week.css
+++ b/styles/styles_full_week.css
@@ -30,6 +30,11 @@ a {
   border-radius: 4px;
   font-size: 24px;
   padding: 12px 48px;
+  /* We use this property to be able to apply top and bottom margins
+     and paddings. Without this property, the anchor tag (inline element)
+     would behave strangely. */
+  display: inline-block;
+  margin: 20px 0px;
 }
 
 a:hover {
